controle de validação com javaScript feito.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="Rodape">
         <p class="esquerda">Apoio</p>
         <p class="esquerda">Entre em contato conosco</p>
-        <p class="esquerda">Centro de Ajuda</p>
+        <p class="esquerda">Central de Ajuda</p>
         <p class="centro"> Loja de computadores</p>
         <p class="direita">Matheus Ramon</p>
     </div>
