--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
 
         <div class="fname">
             <label for="fname"> Primeiro Nome:</label><br>
-            <input type="text" id="fname" name="fname" required>
+            <input type="text" id="fname" name="fname">
         </div>
         <br>
         <div class="sname">
@@ -40,7 +40,7 @@
         <br>
         <div class="email">
             <label for="email">E-mail:</label><br>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email">
         </div>
         <br>
         <div class="idade">
