html do formAction feito, fazer a parte de javaScript.

--- a/formAction.html
+++ b/formAction.html
@@ -1,1 +1,31 @@
-    
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário de Contato</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Início</a> </li>
+            <li><a href="form.html">Formulário</a></li>
+            <li><a href="about.html">Sobre</a> </li>
+        </ul>
+    </nav>
+
+    <h1> Dados do Formulário Recebidos</h1>
+
+    <p><strong>Primeiro Nome: </strong> <span id="resultado_fname"></span> </p>
+    <p><strong>Sobrenome: </strong> <span id="resultado_sname"></span></p>
+    <p><strong>Telefone: </strong> <spam id="resultado_telefone"></spam></p>
+    <p><strong>E-mail: </strong> <span id="resultado_email"></span></p>
+    <p><strong>Idade: </strong> <span id="resultado_idade"></span></p>
+
+    <script src="js/script.js"></script>
+
+</body>
+</html>
