FormAction corrigido e script para preencher o formulario feito

--- a/formAction.html
+++ b/formAction.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Contato</title>
+    <title>Dados Recebidos</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
     <nav>
         <ul>
-            <li><a href="index.html">Início</a> </li>
+            <li><a href="index.html">Início</a></li>
             <li><a href="form.html">Formulário</a></li>
-            <li><a href="about.html">Sobre</a> </li>
+            <li><a href="about.html">Sobre</a></li>
         </ul>
     </nav>
+    <hr>
 
-    <h1> Dados do Formulário Recebidos</h1>
+    <h1>Dados do Formulário Recebidos</h1>
 
-    <p><strong>Primeiro Nome: </strong> <span id="resultado_fname"></span> </p>
-    <p><strong>Sobrenome: </strong> <span id="resultado_sname"></span></p>
-    <p><strong>Telefone: </strong> <spam id="resultado_telefone"></spam></p>
-    <p><strong>E-mail: </strong> <span id="resultado_email"></span></p>
-    <p><strong>Idade: </strong> <span id="resultado_idade"></span></p>
+    <p>Obrigado por enviar seus dados!</p>
+
+    <p><strong>Primeiro Nome:</strong> <span id="resultado-fname"></span></p>
+    <p><strong>Sobrenome:</strong> <span id="resultado-sname"></span></p>
+    <p><strong>Telefone:</strong> <span id="resultado-phone"></span></p>
+    <p><strong>Email:</strong> <span id="resultado-email"></span></p>
+    <p><strong>Idade:</strong> <span id="resultado-idade"></span></p>
 
     <script src="js/script.js"></script>
-
 </body>
 </html>
