CSS e HTML do About e formulario feito, fazer o modal e finalizar.

--- a/form.html
+++ b/form.html
@@ -17,12 +17,14 @@
         </ul>
     </nav>
 
-    <hr> <h1>Entre em contato</h1><form 
-          action="formAction.html" 
-          target="_self" 
-          id="form1" 
-          method="get" >
+    <hr>
 
+    <h1>Entre em contato</h1><form 
+        action="formAction.html" 
+        target="_self" 
+        id="form1" 
+        method="get" >
+    <div class="informacoes">
         <div class="fname">
             <label for="fname"> Primeiro Nome:</label><br>
             <input type="text" id="fname" name="fname">
@@ -52,7 +54,7 @@
             <button type="submit" value="submit"> Enviar Formulário</button>    
         </div>
 
-
+    </div>    
     </form>
 
     <script src="js/script.js"></script>
