--- a/formAction.html
+++ b/formAction.html
@@ -18,13 +18,13 @@
 
     <h1>Dados do Formulário Recebidos</h1>
 
-    <p>Obrigado por enviar seus dados!</p>
-
-    <p><strong>Primeiro Nome:</strong> <span id="resultado-fname"></span></p>
-    <p><strong>Sobrenome:</strong> <span id="resultado-sname"></span></p>
-    <p><strong>Telefone:</strong> <span id="resultado-phone"></span></p>
-    <p><strong>Email:</strong> <span id="resultado-email"></span></p>
-    <p><strong>Idade:</strong> <span id="resultado-idade"></span></p>
+    <div class="informacoesAction">
+        <p><strong>Primeiro Nome:</strong> <span id="resultado-fname"></span></p>
+        <p><strong>Sobrenome:</strong> <span id="resultado-sname"></span></p>
+        <p><strong>Telefone:</strong> <span id="resultado-phone"></span></p>
+        <p><strong>Email:</strong> <span id="resultado-email"></span></p>
+        <p><strong>Idade:</strong> <span id="resultado-idade"></span></p>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
