Trabalho Finalizado, revisar o codigo e tirar ou adicionar comentarios caso necessario.

--- a/formAction.html
+++ b/formAction.html
@@ -14,6 +14,7 @@
             <li><a href="about.html">Sobre</a></li>
         </ul>
     </nav>
+    <main>
     <hr>
 
     <h1>Dados do Formulário Recebidos</h1>
@@ -25,6 +26,16 @@
         <p><strong>Email:</strong> <span id="resultado-email"></span></p>
         <p><strong>Idade:</strong> <span id="resultado-idade"></span></p>
     </div>
+    </main>
+
+    <div class="Rodape">
+        <p class="esquerda">Apoio</p>
+        <p class="esquerda">Entre em contato conosco</p>
+        <p class="esquerda">Central de Ajuda</p>
+        <p class="centro"> Loja de computadores</p>
+        <p class="direita">Matheus Ramon</p>
+    </div>
+
 
     <script src="js/script.js"></script>
 </body>
