--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
             <li class="about"> <a href="about.html">Sobre</a> </li>
         </ul>
     </nav>
-
+    <main>
     <hr>
 
     <h1>Entre em contato</h1><form 
@@ -50,12 +50,22 @@
             <input type="number" id="idade" name="idade" min="18">
         </div>
         <br>
-        <div class="button">
+        <div class="buttonForm">
             <button type="submit" value="submit"> Enviar Formulário</button>    
         </div>
 
     </div>    
     </form>
+    </main>
+
+    <div class="Rodape">
+        <p class="esquerda">Apoio</p>
+        <p class="esquerda">Entre em contato conosco</p>
+        <p class="esquerda">Central de Ajuda</p>
+        <p class="centro"> Loja de computadores</p>
+        <p class="direita">Matheus Ramon</p>
+    </div>
+
 
     <script src="js/script.js"></script>
     
