Contario no form feito

--- a/form.html
+++ b/form.html
@@ -23,8 +23,8 @@
         action="formAction.html" 
         target="_self" 
         id="form1" 
-        method="get" >
-    <div class="informacoes">
+        method="get" > <!--Defini alguns elementos como: qual pagina vai receber os dados; abrir a pag. na mesma aba; ID que o JS vai usar para encontrar o formulário e como os dados serão enviados-->
+    <div class="informacoes"> <!--Informações para preencher-->
         <div class="fname">
             <label for="fname"> Primeiro Nome:</label><br>
             <input type="text" id="fname" name="fname">
@@ -51,7 +51,7 @@
         </div>
         <br>
         <div class="buttonForm">
-            <button type="submit" value="submit"> Enviar Formulário</button>    
+            <button type="submit" value="submit"> Enviar Formulário</button> <!--Botão para enviar o formulário se estiver -->    
         </div>
 
     </div>    
