Comentario no FormAction feito

--- a/formAction.html
+++ b/formAction.html
@@ -19,10 +19,10 @@
 
     <h1>Dados do Formulário Recebidos</h1>
 
-    <div class="informacoesAction">
+    <div class="informacoesAction"> <!--Container para mostrar os dados-->
         <p><strong>Primeiro Nome:</strong> <span id="resultado-fname"></span></p>
         <p><strong>Sobrenome:</strong> <span id="resultado-sname"></span></p>
-        <p><strong>Telefone:</strong> <span id="resultado-phone"></span></p>
+        <p><strong>Telefone:</strong> <span id="resultado-phone"></span></p> <!--O JS vai preencher os dados conforme o ID que foi preenchido-->
         <p><strong>Email:</strong> <span id="resultado-email"></span></p>
         <p><strong>Idade:</strong> <span id="resultado-idade"></span></p>
     </div>
