Comentario no about feito

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
     <hr>
-    <div class="sobre">
+    <div class="sobre"> <!--Conteiner para fazer o layout-->
      
         <div class="historia">
             <h2 class="titulo">Sobre a TechByte</h2>
@@ -34,7 +34,7 @@
         </div>
     
 
-        <div class="qualidades">
+        <div class="qualidades"><!--Conteiner da qualidade-->
             <h2 class="titulo"> Nossas Qualidades</h2>
             <ul>
                 <li class="topico">Entrega Rápida </li>
@@ -50,7 +50,7 @@
 
         </div>
 
-        <div class="parceiros"> 
+        <div class="parceiros"> <!--Conteiner dos parceiros-->
             <h2 class="titulo"> Lojas parceiras</h2>
             <ul>
                 <li class="topico"> Loja 1 </li>
