Alteração nos comentarios feito, divisão do arquivo JS e mudança no nome das 'lojas parceiras'

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 <li class="topico">Entrega Rápida </li>
                 <li class="topico">Garantia de Serviço</li>
                 <li class="topico">Qualidade dos materiais</li>
-                <li class="topico">Profissionalismo com nosso clientes</li>
+                <li class="topico">Profissionalismo com nossos clientes</li>
                 <li class="topico">Equipe Especializada</li>
                 <li class="topico">Suporte pós-venda</li>
                 <li class="topico">Catálogo Diversificado</li>
@@ -53,11 +53,11 @@
         <div class="parceiros"> <!--Conteiner dos parceiros-->
             <h2 class="titulo"> Lojas parceiras</h2>
             <ul>
-                <li class="topico"> Loja 1 </li>
-                <li class="topico"> Loja 2 </li>
-                <li class="topico"> Loja 3 </li>
-                <li class="topico"> Loja 4 </li>
-                <li class="topico"> Loja 5 </li>
+                <li class="topico"> Exodus  </li>
+                <li class="topico"> Mitic Tech </li>
+                <li class="topico"> The Flow Equipamentos </li>
+                <li class="topico"> HardDisk </li>
+                <li class="topico"> Go-Force </li>
             </ul>
         </div>
 
