--- a/index.html
+++ b/index.html
@@ -181,6 +181,6 @@
     </div>
 
 
-    <script src="js/script.js"></script> <!--Importa o JavaScript, está no final para o html ser carregado-->
+    <script src="js/modal.js"></script> <!--Importa o JavaScript, está no final para o html ser carregado-->
 </body>
 </html>
