alteração no nome da página e pedaços da história

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> <!--Exibir acentos e caracteres especiais sem erro-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--Usa a responsividade, ajusta o tamanho da tela de acordo com o dispositivo-->
-    <title>Ramon Technology</title> <!--Titulo que vai aparecer na barra de pesquisa-->
+    <title>TechByte</title> <!--Titulo que vai aparecer na barra de pesquisa-->
     <link rel="stylesheet" href="css/style.css"> <!--Conecta o CSS para fazer as alterações visuais-->
 </head>
 
